--- a/recipes/chickentenders.html
+++ b/recipes/chickentenders.html
@@ -23,6 +23,7 @@
     <li>1 teaspoon kosher salt</li> 
     <li>1 teaspoon ground black pepper</li> 
     <li>4 skinless, boneless chicken tenders, cut into 1/2-inch strips lengthwise</li> 
+    <li>American Garden Breadcrumbs</li>
 </ul> 
 
 <h2>Steps</h2> 
