--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head> 
     <meta charset="utf-8"> 
     <title></title> 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css"/> 
+    <div></div>
 </head>
 <body> 
     <h1>Odin Recipes</h1> 
