--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -2,22 +2,25 @@
 <html lang="en"> 
 <head> 
     <meta charset="utf-8"> 
-    <title></title>
-</head>
+    <title></title> 
+    <link rel="stylesheet" type="text/css" href="../style.css">
+
+</head> 
+
 <body> 
     <h1>Brownies</h1>
     <img src="./images/browny1.jpg" alt="An image of fudgy,delectable brownies">  
 
  
-    <p><strong>Indulge your sweet tooth with our irresistible broniews recipe that promises a perfect blend of fudgy goodness and rich chocoloate flavor. Begin by preheating your oven to 350°F(175°C)<br> 
+    <p> Indulge your sweet tooth with our irresistible broniews recipe that promises a perfect blend of fudgy goodness and rich chocoloate flavor. Begin by preheating your oven to 350°F(175°C)<br> 
         and greasing a square baking pan. In a double boiler, melt a cup of high-quality dark chocolate with a stick of unsalted butter, creating a velvety base for your brownies. Whisk in three<br> 
         three large eggs and a teaspoon of vanilla extract unil the mixture becomes smooth and glossy. In a seperate bowl, sift together one cup of all-purpose flour, half a teaspoon of baking powder,<br> 
         and a pinch of salt. Gently fold the dry ingredients into the chocholate mixture, ensuring an even distribution. For an extra layer of decadence, toss in a cup of chopped nuts or chocolate chips.<br> 
         Pour the batter into the prepared pan and bake for 25-30 minutes, or until a toothpick inserted into the center comes out with mosit crumbs. Allow the brownies to cool before cutting into squares,<br> 
-        creating a delectable treate that is sure to satisfy any chocolate craving.</strong></p>  
+        creating a delectable treate that is sure to satisfy any chocolate craving.</p>  
 
-    <p> <strong>Whether you enjoy them warm with a scoop of vanilla ice cream or on their own, these brownies are bound to be a crowd-pleaser at any gathering. With a perfect balance of chewiness aand gooey richness,<br> 
-        this recipe guarantees a delightful dessert experience that will have everyone asking for seconds. </strong></p>  
+    <p> Whether you enjoy them warm with a scoop of vanilla ice cream or on their own, these brownies are bound to be a crowd-pleaser at any gathering. With a perfect balance of chewiness aand gooey richness,<br> 
+        this recipe guarantees a delightful dessert experience that will have everyone asking for seconds.</p>  
 
 <h2>Ingredients</h2>   
 
