Group selectors h1 and h2
This is because they have similar declarations. Reduces cluttering of command line and makes file easier to read

--- a/recipes/spicy-chicken-noodles.html
+++ b/recipes/spicy-chicken-noodles.html
@@ -2,8 +2,8 @@
 <html lang="en"> 
 <head> 
     <meta charset="utf-8"> 
-    <title></title>
-
+    <title></title> 
+    <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body> 
     <h1>Spicy Chicken Noodles</h1>
