--- a/recipes/chickentenders.html
+++ b/recipes/chickentenders.html
@@ -2,7 +2,8 @@
 <html lang="en"> 
 <head>  
     <meta charset="utf-8"> 
-    <title></title>
+    <title></title> 
+    <link rel="stylesheet" type="text/css" href="../style.css">
 </head> 
 <body> 
     <h1>Chicken Tenders</h1>  
