--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <div></div>
 </head>
 <body> 
-    <h1>Odin Recipes</h1> 
+    <h1 class="h1-homepage">Odin Recipes</h1> 
 
+ <div class="list-mainpage">    
 <ul>
    <li><a href="recipes/brownies.html">Brownies</a></li> 
    <li><a href="recipes/spicy-chicken-noodles.html">Spicy Chicken Noodles</a></li> 
     <li><a href="recipes/chickentenders.html">Chicken Tenders</a></li> 
 </ul>
-
+</div>
 
 </body>
 
