Group class selectors
This reduces clutter as the list and h1 on homepage share similar styles.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body> 
     <h1 class="h1-homepage">Odin Recipes</h1> 
 
- <div class="list-mainpage">    
-<ul>
+   
+<ul class="list-mainpage">
    <li><a href="recipes/brownies.html">Brownies</a></li> 
    <li><a href="recipes/spicy-chicken-noodles.html">Spicy Chicken Noodles</a></li> 
     <li><a href="recipes/chickentenders.html">Chicken Tenders</a></li> 
 </ul>
-</div>
+
 
 </body>
 
